# pointcloud-toolkit

./: CMakeLists.txt  README.md  pyproject.toml
cpp/: CMakeLists.txt  knn.cpp
python/pcseg/: cli.py
python/pcseg/cfg/: default.yaml
python/pcseg/data/: shapenet_part.py
python/pcseg/engine/: train.py  utils.py
python/pcseg/models/: dgcnn.py
